--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
-    <title>あなたのいいところ診断ゾ</title>
+    <title>あなたのいいところ診断するゾ</title>
 </head>
 <body>
     <h1>あなたのいいところは?</h1>
